framec_tests/language_specific/c/v3_facade_smoke/negative/stack_with_args.frm
@target c

system S {
    machine:
        $A {
            e() {
                __frame_stack_push(1);
            }
        }
}

